# ccnotes

./: .gitignore  README.md  pyproject.toml
application/config/: config.php  database.php
application/controllers/: Note.php  Series.php  Speaker.php  View.php
application/models/: Note_model.php  Series_model.php  Speaker_model.php
application/views/note/: add.php  edit.php  index.php
application/views/pages/: home.php  show_note.php  show_previous.php
application/views/series/: add.php  edit.php  index.php
application/views/speaker/: add.php  edit.php  index.php
application/views/templates/: footer.php  header.php
src/recipe_planner/categorizer/: cuisine_data.json  keyword_engine.py
src/recipe_planner/cli/: app.py  export_cmds.py  plan_cmds.py  recipe_cmds.py  scan_cmds.py  shoplist_cmds.py
src/recipe_planner/db/: connection.py  schema.sql
src/recipe_planner/editor/: conflict_detector.py  field_tracker.py  undo_redo.py  version_manager.py
src/recipe_planner/export/: pdf_renderer.py  plan_pdf.py  recipe_pdf.py  shoplist_pdf.py
src/recipe_planner/models/: ingredient.py  meal_plan.py  recipe.py  shopping_list.py
src/recipe_planner/planner/: constraints.py  meal_planner.py  slot_filler.py
src/recipe_planner/scanner/: image_scanner.py  normalizer.py  text_scanner.py
src/recipe_planner/shopping/: category_grouper.py  (+2 more)
tests/: conftest.py  test_category_grouper.py  test_conflict_detector.py  test_keyword_engine.py  test_meal_planner.py  test_merger.py  test_recipe_repo.py  test_text_scanner.py  test_unit_converter.py  test_version_manager.py
(+6 files in other folders)
